# Polymarket-Clone

./: .gitignore  README.md  cargo.toml  docker-compose.yaml
client/: package-lock.json  vite.config.ts
client/src/: App.tsx
client/src/api/: market.ts
client/src/components/: MarketCard.tsx  MarketDetailHeader.tsx  OrderBook.tsx  OutcomeOverview.tsx
client/src/hooks/: useOrderbookWebSocket.ts
client/src/lib/: utils.ts
client/src/pages/: MarketDetailPage.tsx  MarketsPage.tsx
client/src/types/: market-detail.ts  market.ts  orderbook.ts
common/: Cargo.toml
common/src/: config.rs  constant.rs  error.rs  lib.rs  model.rs  nats_handler.rs
common/src/config/: db.rs  jwt.rs
common/src/database/: client.rs
common/src/model/: market.rs  mod.rs  user.rs
common/src/util/: hash.rs  jwt.rs
common/src/validation/: admin_dto.rs  mod.rs  order_dto.rs  user_dto.rs
migrations/: 20260313083740_tables.sql
services/account-service/: Cargo.toml
services/account-service/src/: db.rs  main.rs  middleware.rs  router.rs
services/account-service/src/handler/: auth.rs  mod.rs  profile.rs  wallet.rs
services/admin-service/: Cargo.toml
services/admin-service/src/: db.rs  dto.rs  main.rs  middleware.rs  router.rs
services/admin-service/src/handler/: auth.rs  market.rs  mod.rs  profile.rs
services/auth-service/: Cargo.toml
services/auth-service/src/: db.rs  dto.rs  main.rs  router.rs
services/auth-service/src/handler/: admin.rs  mod.rs  user.rs
services/cdc-service/: Cargo.toml
services/cdc-service/src/: ch_client.rs  dto.rs  main.rs  model.rs
services/cdc-service/src/consumer/: holding.rs  mod.rs  order.rs  trade.rs  transaction.rs
services/feed-service/: Cargo.toml
services/feed-service/src/: connection.rs  consumer.rs  handler.rs  main.rs  manager.rs  nats_handler.rs
services/market-service/: Cargo.toml
services/market-service/src/: db.rs  dto.rs  main.rs  middleware.rs  nats_handler.rs  router.rs
services/market-service/src/handler/: market.rs  mod.rs
services/matching-engine/: Cargo.toml
services/matching-engine/src/: db.rs  engine.rs  main.rs  nats_consumer.rs  nats_handler.rs
services/order-service/: Cargo.toml
services/order-service/src/: consumer.rs  db.rs  dto.rs  main.rs  middleware.rs  nats_handler.rs  nats_publisher.rs  router.rs
services/order-service/src/handler/: mod.rs  order.rs
services/settlement-service/: Cargo.toml
services/settlement-service/src/: db.rs  main.rs
services/user-service/: Cargo.toml
services/user-service/src/: db.rs  dto.rs  main.rs  router.rs
services/user-service/src/handler/: auth.rs  holding.rs  market.rs  mod.rs  profile.rs  wallet.rs
services/user-service/src/util/: hash.rs
