[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2.workspace = true
chrono.workspace = true
dotenv.workspace = true
jsonwebtoken.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
axum.workspace = true
async-nats.workspace = true