[package]
name = "account-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
argon2.workspace = true
axum.workspace = true
axum-extra.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenv.workspace = true
jsonwebtoken.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
validator.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
time.workspace = true