[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
axum.workspace = true
axum-extra.workspace = true
async-trait.workspace = true
serde_json.workspace = true
sqlx.workspace = true
validator.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
time = "0.3.20"