[package]
name = "cdc-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
rdkafka = { version = "0.36", features = ["cmake-build"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true