[package]
name = "order-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
axum.workspace = true
axum-extra.workspace = true
async-trait.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
validator.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
futures.workspace = true