[package]
name = "settlement-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
async-trait.workspace = true
chrono.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
tokio.workspace = true
futures.workspace = true
redis.workspace = true
deadpool-redis.workspace = true